--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <!--Import materialize.css-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
-      <link type="text/css" rel="stylesheet" href="/assets/css/main.css"  media="screen,projection"/>
+      <link type="text/css" rel="stylesheet" href="/survey-live/assets/css/main.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -23,9 +23,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-animate.min.js"></script>
         <script src="https://cdn.firebase.com/js/client/2.3.1/firebase.js"></script>
         <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
-        <script src="/assets/js/app.js"></script> 
-        <script src="/assets/js/services.js"></script> 
-        <script src="/assets/js/controllers.js"></script> 
-        <script src="/assets/js/components.js"></script> 
+        <script src="/survey-live/assets/js/app.js"></script> 
+        <script src="/survey-live/assets/js/services.js"></script> 
+        <script src="/survey-live/assets/js/controllers.js"></script> 
+        <script src="/survey-live/assets/js/components.js"></script> 
     </body>
   </html>
