--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
       <!--Import Google Icon Font-->
       <title ng-bind="$state.current.data.pageTitle"></title>
-      <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <!--Import materialize.css-->
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css">
+      <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
       <link type="text/css" rel="stylesheet" href="/survey-live/assets/css/main.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
